--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,6 @@
 	"public": false,
 	"builds": [{ "src": "main.py", "use": "@vercel/python" }],
 	"routes": [
-		{ "src": "/", "dest": "main.py" }
+		{ "src": "/(.*)", "dest": "main.py" }
 	]
 }
